--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
